[metadata]
name = bb_deepRL-benballintyn
version = 0.0.1
author = Benjamin Ballintyn
author_email = benballintyn@gmail.com
description = Custom deep reinforcement learning package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/benballintyn/bb_deepRL
project_urls = 
    Bug Tracker = https://github.com/benballintyn/bb_deepRL/issues
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
    = src
packages = find:
python_requires = >= 3.9
install_requires = 
    torch

[options.packages.find]
where = src
